--- a/src/style.css
+++ b/src/style.css
@@ -6,6 +6,7 @@
 
 body {
     font-family: 'Josefin Sans', sans-serif;
+    background-color: #133047;
 }
 
 /* width */
@@ -28,3 +29,4 @@ body {
 ::-webkit-scrollbar-thumb:hover {
     background: #464646;
 }
+
