--- a/src/style.css
+++ b/src/style.css
@@ -4,6 +4,10 @@
 @tailwind components;
 @tailwind utilities;
 
+.background {
+    background-image: url("/images/b3.jpg");
+}
+
 body {
     font-family: 'Josefin Sans', sans-serif;
     background-color: #133047;
