--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,16 @@
+@import url('https://fonts.googleapis.com/css?family=Josefin+Sans');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+body {
+  font-family: 'Josefin Sans', sans-serif;
+}
+
 html {
-  scroll-behavior: smooth;
-  scroll-padding-top: 1rem; /* Adjust as needed */
+  /*scroll-behavior: smooth;*/
+  /*scroll-padding-top: 1rem; !* Adjust as needed *!*/
 }
 
 /* For Firefox */
@@ -26,7 +32,7 @@ html {
   background: rgba(0, 0, 0, 0.1); /* Customize the scrollbar track color */
 }
 
-.scroll-container {
-  scroll-behavior: smooth;
-  transition: scroll 2s ease-in-out; /* Adjust the duration as needed */
-}
+/*.scroll-container {*/
+/*  scroll-behavior: smooth;*/
+/*  transition: scroll 2s ease-in-out; !* Adjust the duration as needed *!*/
+/*}*/
